--- a/genesis-intellij/src/main/resources/META-INF/plugin.xml
+++ b/genesis-intellij/src/main/resources/META-INF/plugin.xml
@@ -14,7 +14,7 @@
          Simple HTML elements (text formatting, paragraphs, and lists) can be added inside of <![CDATA[ ]]> tag.
          Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-description -->
     <description>
-        GENESIS : A Database-First code generator for Java Spring Boot and .NET for JetBrains IDEs
+        Genesis : A Database-First code generator for Java Spring Boot and .NET for JetBrains IDEs
     </description>
 
     <!-- Product and plugin compatibility requirements.
