[fix] dynamized the dbcontext type in the template of projects.yaml

--- a/genesis-core/src/main/resources/data_genesis/yaml/projects.yaml
+++ b/genesis-core/src/main/resources/data_genesis/yaml/projects.yaml
@@ -180,7 +180,7 @@
         
         // Add services to the container.
         var connectionString = builder.Configuration.GetConnectionString("DefaultConnection");
-        builder.Services.AddDbContext<WebApiNetContext>(options =>
+        builder.Services.AddDbContext<${majStart(projectName)}Context>(options =>
             options.Use${daoName}(connectionString${addOptions}));
         
         // Adding repositories ...
