[fix] Data type mismatch issue FK .NET
- Added a new variable for models "referencedColumnType"

--- a/genesis-core/src/main/resources/data_genesis/yaml/frameworks.yaml
+++ b/genesis-core/src/main/resources/data_genesis/yaml/frameworks.yaml
@@ -438,9 +438,9 @@
       {{tab}}[Column("${this.columnName}")]
       {{tab}}public ${this.type} ${majStart(this.name)} { get; set; }{{elseIf this.isForeignKey}}
       {{tab}}
-      {{tab}}[ForeignKey("${this.type}")]
       {{tab}}[Column("${this.columnName}")]
-      {{tab}}public ${this.columnType} ${majStart(this.columnNameField)} { get; set; }
+      {{tab}}public ${this.referencedColumnType} ${majStart(this.columnNameField)} { get; set; }
+      {{tab}}[ForeignKey(nameof(${majStart(this.columnNameField)}))]
       {{tab}}public virtual ${this.type}? ${majStart(this.name)} { get; set; }
       {{tab}}{{else}}
       {{tab}}[Column("${this.columnName}")]
