FEAT-Added new Types of PostgreSQL for Java and C#

--- a/genesis-core/src/main/resources/data_genesis/yaml/frameworks.yaml
+++ b/genesis-core/src/main/resources/data_genesis/yaml/frameworks.yaml
@@ -71,6 +71,7 @@
             username: ${databaseUsername}
             password: ${databasePassword}
           jpa:
+            database-platform : org.hibernate.dialect.${databaseType}${databaseVersion}Dialect
             hibernate:
               ddl-auto: ${hibernateDdlAuto}
             properties:
